rewrite text-shadow

--- a/src/component/River.module.styl
+++ b/src/component/River.module.styl
@@ -1,10 +1,15 @@
 /* stylelint-disable */
 text-stroke(width, color)
   text-shadow:
-    width 0 0 color,
-    0 width 0 color,
-    width 0 0 color,
-    0 width 0 color;
+    0 0 width color,
+    0 0 width color,
+    0 0 width color,
+    0 0 width color,
+    0 0 width color,
+    0 0 width color,
+    0 0 width color,
+    0 0 width color,
+    0 0 width color;
 /* stylelint-enable */
 
 .River
