--- a/src/component/River.module.styl
+++ b/src/component/River.module.styl
@@ -16,5 +16,8 @@ text-stroke(width, color)
   width 100%
   height 100%
 
+  position relative
+  overflow hidden
+
   text-stroke 1px #000
   font-size 2.8em
