screen relative font-size (by percentage)

--- a/src/component/Flow.module.styl
+++ b/src/component/Flow.module.styl
@@ -7,6 +7,8 @@
   position absolute
   white-space nowrap
 
+  font-size 5.5%
+
   top var(--top)
   animation-fill-mode forwards
   animation-name rightToLeft
