--- a/src/component/River.module.styl
+++ b/src/component/River.module.styl
@@ -13,6 +13,8 @@ text-stroke(width, color)
 /* stylelint-enable */
 
 .River
+  --height 0
+
   width 100%
   height 100%
 
@@ -20,4 +22,4 @@ text-stroke(width, color)
   overflow hidden
 
   text-stroke 1px #000
-  font-size 1.4em
+  font-size calc(var(--height) * 1px)
